frontend/test/should_pass/basic_011.grg
rule r {
	pattern {
		x : Node;
	}
	modify {
		y : Node;
	}
}

