frontend/test/should_fail/retype_023.grg
using retype_model_001;

rule r {
	x:TYPE1;

	multiple {
		modify {
			y:TYPE2<x>;
		}
	}

	modify {}
}

